<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/action_sort_age"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_sort_age" />

            <item
                android:id="@+id/action_sort_name"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_sort_name" />

            <item
                android:id="@+id/action_sort_owner"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_sort_owner" />

            <item
                android:id="@+id/action_sort_distance"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_sort_distance" />
        </menu>
    </item>


    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_leaderboard" />

</menu>